added jquery slider ui

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 </head>
 
 <body>
+	<div class="container">
+		<div id="bpm_area">
 
+		</div>
+	</div>
+	<div class="container">
+		<div id="signature_area">
+
+		</div>
+	</div>
 </body>
 </html>	
