--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		</div>
 	</div>
 	<div class="container">
-		<div id="signature_area">
+		<div id="subdivision_area">
 			<form action="#">
 				<fieldset>
 					<label for="subdivision">Subdivision:</label>
@@ -53,5 +53,16 @@
 			</form>
 		</div>
 	</div>
+	<div class="container">
+		<div id="signatura_area">
+			<form action="#">
+				<label>Signature:</label>
+				<input class="signature" type="number" name="sig-one" min="2" max="19">
+				/
+				<input class="signature" type="number" name="sig-two" min="4" max="16">
+			</form>
+		</div>
+	</div>
+
 </body>
 </html>	
