--- a/index.html
+++ b/index.html
@@ -29,40 +29,41 @@
 </head>
 
 <body>
-	<div class="container">
-		<div id="bpm_area">
-			<p>
-				<label for="amount">BPM:</label>
-				<input type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;">
-			</p>
-				<div id="slider"></div>
+	<div class="max-width">
+		<div class="container">
+			<div id="bpm_area">
+				<p>
+					<label for="amount">BPM:</label>
+					<input type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;">
+				</p>
+					<div id="slider"></div>
+			</div>
+		</div>
+		<div class="container">
+			<div id="subdivision_area">
+				<form action="#">
+					<fieldset>
+						<label for="subdivision">Subdivision:</label>
+						<select name="subdivision" id="subdivision">
+							<option selected="selected">Quarter</option>
+							<option>Eighth</option>
+							<option>Triplets</option>
+							<option>Sixteenth</option>
+						</select>
+					</fieldset>
+				</form>
+			</div>
+		</div>
+		<div class="container">
+			<div id="signatura_area">
+				<form action="#">
+					<label>Signature:</label>
+					<input class="signature" type="number" name="sig-one" min="2" max="19">
+					/
+					<input class="signature" type="number" name="sig-two" min="4" max="16">
+				</form>
+			</div>
 		</div>
 	</div>
-	<div class="container">
-		<div id="subdivision_area">
-			<form action="#">
-				<fieldset>
-					<label for="subdivision">Subdivision:</label>
-					<select name="subdivision" id="subdivision">
-						<option selected="selected">Quarter</option>
-						<option>Eighth</option>
-						<option>Triplets</option>
-						<option>Sixteenth</option>
-					</select>
-				</fieldset>
-			</form>
-		</div>
-	</div>
-	<div class="container">
-		<div id="signatura_area">
-			<form action="#">
-				<label>Signature:</label>
-				<input class="signature" type="number" name="sig-one" min="2" max="19">
-				/
-				<input class="signature" type="number" name="sig-two" min="4" max="16">
-			</form>
-		</div>
-	</div>
-
 </body>
 </html>	
