--- a/hackthenorth.html
+++ b/hackthenorth.html
@@ -9,6 +9,9 @@
 </body>
 
 <template name="hello">
-  <button>Click Me</button>
+  Enter BPM: <input type="text" id="BPM" />
+  <br />
+  <button id="startMetronome">Start Me</button>
+  <button id="stopMetronome">Stop Me</button>
   <p>You've pressed the button {{counter}} times.</p>
 </template>
